# internal/api/routers/host.go
@@ -12,6 +12,8 @@ func (s *HostRouter) InitRouter(Router *gin.RouterGroup) {
 	baseApi := handler.ApiGroupApp.BaseApi
 	{
 		hostRouter.POST("", baseApi.CreateHost)
+		hostRouter.POST("/search", baseApi.SearchHost)
+		hostRouter.POST("/update", baseApi.UpdateHost)
 		hostRouter.POST("/tree", baseApi.HostTree)
 		hostRouter.POST("/test/byid/:id", baseApi.TestByID)
 		hostRouter.POST("/test/byinfo", baseApi.TestByInfo)
